# shark-cli

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
adr/: index.html
adr/0001-lazy-command-registration/: index.html
adr/0002-dual-format-config-file/: index.html
adr/0003-auth-type-auto-detection/: index.html
adr/0004-no-services-layer/: index.html
adr/0005-durable-token-cache/: index.html
adr/0006-idempotent-only-retries/: index.html
adr/0007-incremental-services-layer/: index.html
adr/0008-command-naming-convention/: index.html
adr/0009-server-boot-mode-policy/: index.html
adr/0010-static-completion-script/: index.html
assets/: theme.css
commands/: index.html
commands/access-rule/: index.html
commands/aggregate/: index.html
commands/alarm/: index.html
commands/application-credential/: index.html
commands/audit/: index.html
commands/auth/: index.html
commands/availability-zone/: index.html
commands/backup/: index.html
commands/catalog/: index.html
commands/cleanup/: index.html
commands/cluster/: index.html
commands/completion/: index.html
commands/compute-service/: index.html
commands/container/: index.html
commands/credential/: index.html
commands/doctor/: index.html
commands/domain/: index.html
commands/endpoint/: index.html
commands/endpoint-group/: index.html
commands/event/: index.html
commands/export/: index.html
commands/federation-protocol/: index.html
commands/find/: index.html
commands/flavor/: index.html
commands/floating-ip/: index.html
commands/group/: index.html
commands/hypervisor/: index.html
commands/identity-provider/: index.html
commands/image/: index.html
commands/ip/: index.html
commands/keypair/: index.html
commands/limit/: index.html
commands/limits/: index.html
commands/loadbalancer/: index.html
commands/mapping/: index.html
commands/metric/: index.html
commands/network/: index.html
commands/object/: index.html
commands/overview/: index.html
commands/placement/: index.html
commands/policy/: index.html
commands/profile/: index.html
commands/project/: index.html
commands/qos/: index.html
commands/quota/: index.html
commands/rating/: index.html
commands/recordset/: index.html
commands/region/: index.html
commands/registered-limit/: index.html
commands/role/: index.html
commands/secret/: index.html
commands/security-group/: index.html
commands/server/: index.html
commands/server-group/: index.html
commands/service/: index.html
commands/service-provider/: index.html
commands/setup/: index.html
commands/stack/: index.html
commands/subnet-pool/: index.html
commands/token/: index.html
commands/trunk/: index.html
commands/trust/: index.html
commands/usage/: index.html
commands/user/: index.html
commands/volume/: index.html
commands/watch/: index.html
commands/zone/: index.html
docs/: getting-started.md  index.md  reference.md
docs/adr/: 0001-lazy-command-registration.md  0002-dual-format-config-file.md  0003-auth-type-auto-detection.md  0004-no-services-layer.md  0005-durable-token-cache.md  0006-idempotent-only-retries.md  0007-incremental-services-layer.md  0008-command-naming-convention.md  0009-server-boot-mode-policy.md  0010-static-completion-script.md  README.md
docs/commands/: access-rule.md  aggregate.md  alarm.md  application-credential.md  audit.md  auth.md  availability-zone.md  backup.md  catalog.md  cleanup.md  cluster.md  completion.md  compute-service.md  container.md  credential.md  doctor.md  domain.md  endpoint-group.md  endpoint.md  event.md  export.md  federation-protocol.md  find.md  flavor.md  floating-ip.md  group.md  hypervisor.md  identity-provider.md  image.md  index.md  ip.md  keypair.md  limit.md  limits.md  loadbalancer.md  mapping.md  metric.md  network.md  object.md  overview.md  (+28 more)
getting-started/: index.html
orca_cli/: __init__.py  main.py
orca_cli/commands/: access_rule.py  aggregate.py  alarm.py  application_credential.py  audit.py  auth.py  availability_zone.py  backup.py  catalog.py  cleanup.py  cluster.py  completion.py  compute_service.py  container.py  credential.py  doctor.py  domain.py  endpoint.py  endpoint_group.py  event.py  export.py  federation.py  find.py  flavor.py  floating_ip.py  group.py  hypervisor.py  image.py  ip_whois.py  keypair.py  limit.py  limits.py  loadbalancer.py  metric.py  network.py  object_store.py  overview.py  placement.py  policy.py  profile.py  (+24 more)
orca_cli/core/: aliases.py  cache.py  client.py  completions.py  config.py  context.py  exceptions.py  output.py  shell_completion.py  validators.py  waiter.py  wizard.py
orca_cli/models/: __init__.py  backup.py  compute.py  container_infra.py  identity.py  image.py  key_manager.py  network.py  object_store.py  orchestration.py  placement.py  server.py  shared_file_system.py  volume.py
orca_cli/services/: __init__.py  backup.py  compute.py  container_infra.py  dns.py  identity.py  image.py  key_manager.py  load_balancer.py  network.py  object_store.py  placement.py  (+4 more)
reference/: index.html
scripts/: check-no-ai-attribution.sh  gen-command-docs.py
search/: search_index.json
shark_cli/: main.py
tests/: conftest.py  test_alarm.py  test_aliases.py  test_app_credentials.py  test_application_credential_cli.py  test_audit.py  test_auth_commands.py  test_backup.py  test_cache.py  test_catalog.py  test_cinder_admin.py  test_cleanup.py  test_cli_registration.py  test_client.py  test_cluster.py  test_completion.py  test_completions.py  test_compute.py  test_config.py  test_context.py  test_dns.py  test_doctor.py  test_event.py  test_exceptions.py  test_export.py  test_find.py  test_flavor.py  test_floating_ip.py  test_hypervisor.py  test_identity.py  test_image.py  test_image_import_cache.py  test_image_members.py  test_image_stage_tasks.py  test_ip_whois.py  test_keypair.py  test_keystone_admin.py  test_keystone_gaps.py  test_loadbalancer.py  test_main.py  (+40 more)
(+39 files in other folders)
