[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orca-openstackclient"
version = "2.2.1"
description = "orca — OpenStack Rich Command-line Alternative"
authors = ["Kevin Allioli"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "orca_cli" }]
keywords = ["openstack", "cloud", "cli", "api", "admin", "orca"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1"
httpx = "^0.27"
pyyaml = "^6.0"
rich = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"
types-PyYAML = "^6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5"
mkdocs-click = "^0.9"

[tool.poetry.scripts]
orca = "orca_cli.main:cli"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "C901"]
ignore = [
    "E501",  # line-too-long
    "S110",  # try-except-pass — best-effort cache/prefetch/completion paths must never crash the CLI
    "S112",  # try-except-continue — same rationale as S110
    "S311",  # pseudo-random — used for retry jitter, never for crypto
    "S603",  # subprocess without shell=True — that is exactly the safe form
    "S606",  # start-process-with-no-shell — we never want a shell wrapper
    "S607",  # partial path (ssh, openssl) — resolved from user PATH, intentional
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
# Tests: pytest assert; dummy creds in fixtures; intentional broad raises;
# bind-all addresses in IP-validator inputs; complex setup helpers.
"tests/*" = ["S101", "S105", "S106", "S107", "S104", "B017", "B018", "C901"]

[tool.mypy]
python_version = "3.9"
files = ["orca_cli"]
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["orca_cli"]
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
